testsuite/tests/ghc-regress/parser/should_fail/readFail033.hs
-- TAB character in a string literal is disallowed:
x = "	"
